# oval

./: Cargo.toml  README.md  spec.md  specification.md  test.oval
.cargo/: config.toml
cow-array/: Cargo.toml
cow-array/src/: lib.rs
oval/: Cargo.toml
oval-lang/: Cargo.toml
oval-lang/src/: abort.rs  alloc_helper.rs  arena.rs  bitset.rs  gc.rs  hashed.rs  interner.rs  lib.rs  mir.rs  mutex.rs  spanned.rs  tokens.rs
oval-lang/src/ast/: mod.rs  recursive.rs
oval-lang/src/compile/: algorithms.rs  ast_id.rs  build_hir.rs  mod.rs
oval-lang/src/compile/build_hir/: signature.rs
oval-lang/src/compile/hir/: mod.rs  unification_table.rs
oval-lang/src/compile/mir/: interpreter.rs  mod.rs  scalar.rs
oval-lang/src/parser/: mod.rs
oval-lang/src/parser/parser_impl/: ast_impl.rs  ext.rs  mod.rs
oval/src/: fmt_ast.rs  hashed.rs  interner.rs  lib.rs  main.rs  path.rs  spanned.rs  symbol.rs  tokens.rs
oval/src/ast/: mod.rs  recursive.rs
oval/src/compile/: compiler.rs  error.rs  hir.rs  interner.rs  mod.rs  parser.rs  source.rs  source_file.rs  source_map.rs  span.rs  tokenizer.rs
oval/src/compile/error/: mod.rs  syntax.rs
oval/src/compile/hir/: item.rs  scoped.rs  type.rs
oval/src/compile/parser/: item.rs  mod.rs  type.rs
oval/src/compile/parser/block/: expr.rs  mod.rs
oval/src/compile/syntax/: item.rs  mod.rs  type.rs
oval/src/compile/syntax/block/: expr.rs  mod.rs
oval/src/parser/: mod.rs
oval/src/parser/parser_impl/: ast_impl.rs  ext.rs
oval/src/symbol/: mod.rs  path_inner.rs
oval/test-files/: expr.oval  function.oval
ovalc/: Cargo.toml
ovalc/src/: fmt_ast.rs  main.rs
ovalc/test-files/: const-eval.oval  function.oval
src/: interner.rs  main.rs
src/parser/: interner.rs  mod.rs  tokenizer.rs
