[package]
name = "oval-lang"
version = "0.0.1"
edition = "2024"

[features]
default = ["parking_lot", "std", "stacker"]
parking_lot = [
    "dep:parking_lot",
    "std",
]
std = [
    "foldhash/std",
    "chumsky/std",
    "rpds/std",
    "indexmap/std",
    "compact_str/std"
]
stacker = [
    "dep:stacker",
    "chumsky/stacker"
]


[dependencies]
foldhash = { version = "0.2.0", default-features = false }
chumsky = { version = "0.12.0", default-features = false, features = ["extension"] }
stacker = { version = "0.1.23", optional = true }
rpds = { version = "1.2.0", default-features = false }
bytemuck = { version = "1.25.0", default-features = false, features = ["derive"] }
indexmap = { version = "2.13.0", default-features = false }
portable-atomic = { version = "1.13.1", default-features = false, features = ["require-cas"] }
compact_str = { version = "0.9.0", default-features = false }
cfg-if = "1.0.4"
hashbrown = "0.16.1"
ariadne = "0.6.0"
thiserror = "2.0.18"
archery = "1.2.2"
pastey = "0.2.1"
parking_lot = { version = "0.12.5", optional = true }

[dependencies.spin]
version = "0.10.0"
optional = true
default-features = false
features = ["portable-atomic", "fair_mutex"]