[package]
name = "oval"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["string-interner/std", "chumsky/default"]
binary-build = ["dep:eyre", "std"]


[[bin]]
name = "oval"
required-features = ["binary-build"]

[dependencies]
cfg-if = "1.0.1"
string-interner = { version = "0.19.0", default-features = false, features = ["backends"] }
eyre = { version = "0.6.12", optional = true }
cow-array = { version = "*", path = "../cow-array" }
thiserror = "2.0.12"
ariadne = "0.5.1"
hashbrown = "0.15.4"
paste = "1.0.15"
thin-vec = "0.2.14"
chumsky = { version = "0.10.1", default-features = false, features = ["pratt"] }