[package]
name = "oval"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "stacker"]
std = [
    "string-interner/std",
    "chumsky/default",
    "chumsky/std",
    "once_cell/std",
    "once_cell/default",
]
stacker = ["chumsky/stacker", "dep:stacker"]
binary-build = ["dep:eyre", "default"]


[[bin]]
name = "oval"
required-features = ["binary-build"]

[dependencies]
string-interner = { version = "0.19.0", default-features = false, features = ["backends"] }
eyre = { version = "0.6.12", optional = true }
chumsky = { version = "0.10.1", default-features = false, features = ["pratt", "extension"] }
once_cell = { version = "1.21.3", default-features = false }
stacker = { version = "0.1.21", optional = true }